--- a/app/templates/files/test/manual.html
+++ b/app/templates/files/test/manual.html
@@ -26,7 +26,7 @@
 
 //Load component.
 //Change name of component and backend and webshop uid to something suitable
-$('#target').diversity('<%= componentName %>', {
+$('#target').diversity('<%= componentCamelName %>', {
   root: '../',
   deps: 'deps/',
   backend: 'https://davidstage.textalk.se/backend/jsonrpc/v1/',
