Add the components "wrapper" class automatically

--- a/app/templates/files/component.mustache.html
+++ b/app/templates/files/component.mustache.html
@@ -8,4 +8,4 @@
   Try to have one enclosing tag around your component and add the components
   name as a class to it.
 -->
-<div <%= componentName %>></div>
+<div <%= componentName %> class="<% componentName %>"></div>
