--- a/app/templates/files/test/manual.html
+++ b/app/templates/files/test/manual.html
@@ -12,12 +12,13 @@
   </div>
 
   <!-- base dependencies that are not included as deps in diversity.json -->
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="deps/jquery.jsonrpcclient.js/jquery.jsonrpcclient.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-sanitize.min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+  <script type="text/javascript" src="/node_modules/angular/angular.min.js"></script>
+  <script type="text/javascript" src="/node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+  <script type="text/javascript" src="/node_modules/mustache/mustache.min.js"></script>
   <script type="text/javascript" src="deps/diversity-js/diversity-renderer.js"></script>
+  <script type="text/javascript" src="/node_modules/tota11y/build/tota11y.min.js"></script>
   <script type="text/javascript">
   angular.module('test', []).controller('TestCtrl', function() {
     //Use the TestCtrl to setup anythin you component might need,
