Add protractor, automate more and make more (all?) lib dependencies point to local resources.

--- a/app/templates/files/test/manual.html
+++ b/app/templates/files/test/manual.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Manual Test of Diversity Component</title>
+  <title>Manual Test for <%= componentTitle %></title>
   <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body ng-controller="TestCtrl">
