--- a/app/templates/files/component.mustache.html
+++ b/app/templates/files/component.mustache.html
@@ -8,4 +8,4 @@
   Try to have one enclosing tag around your component and add the components
   name as a class to it.
 -->
-<<%= componentName %> class="<%= componentName %>"><<%= componentName %>/>
+<<%= componentName %> class="<%= componentName %>"></<%= componentName %>>
