--- a/app/templates/files/test/manual.html
+++ b/app/templates/files/test/manual.html
@@ -2,6 +2,7 @@
 <html lang="sv">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manual Test for <%= componentTitle %></title>
   <link href="/node_modules/bootlint-gui/dist/bootlint-gui.css" rel="stylesheet">
